realize new Service, DTO